# terminal-games

./: .gitmodules  CMakeLists.txt  README.md
number-guessing/: go.mod  main.go
number-guessing/cmd/: cmd.go
number-guessing/internal/game/: game.go  number_guessing.go
number-guessing/internal/handler/: game_handler.go  handler.go
number-guessing/internal/input/: cli_reader.go  reader.go
number-guessing/internal/output/: cli_writer.go  writer.go
snake/: CMakeLists.txt  snake.c
